Initial files for tictactoe

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-projects/2020/0/degrees/__pycache__/degrees.cpython-37.pyc
-projects/2020/0/degrees/__pycache__/util.cpython-37.pyc
+projects/**/__pycache__/*.pyc
