Finish minimax implementation

--- a/projects/2020/x/tictactoe/.vscode/launch.json
+++ b/projects/2020/x/tictactoe/.vscode/launch.json
@@ -12,7 +12,7 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "Python: Run degrees.py",
+      "name": "Python: Run runner.py",
       "type": "python",
       "request": "launch",
       "program": "${workspaceFolder}/runner.py",
